<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/voltageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voltage_input"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/currentCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/powerConsumed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power_consumed"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/energyConsumed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/energy_consumed"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/energyRemaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/energy_remaining"
            android:textSize="25sp" />
        <TextClock
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="25sp" />
    </LinearLayout>
</android.support.v7.widget.CardView>